--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -13,8 +13,11 @@
     </p>
 
     <div class="row">
-      <div class="col">
-        <a href="#/login" class="button button-block">Inloggen</a>
+      <div class="col" ng-if="!app.isAuthenticated">
+        <a ng-click="app.login()" class="button button-block">Inloggen</a>
+      </div>
+      <div class="col" ng-if="app.isAuthenticated">
+        <a ng-click="intro.resetNav()" href="#/app/bloodpressure" nav-clear class="button button-block">Naar de data</a>
       </div>
     </div>
 </ion-view>
