--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
     <script src="app/app.routes.js"></script>
+    <script src="app/app.controller.js"></script>
 
     <!-- Startup and login logic -->
     <script src="app/intro/index.controller.js"></script>
@@ -47,18 +48,34 @@
     <script src="app/bloodpressure/bloodpressure.service.js"></script>
   </head>
   <body ng-app="healthcafe">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
     <ion-nav-view></ion-nav-view>
+    <ion-side-menus>
+
+      <ion-side-menu-content>
+        <!--
+          The nav bar that will be updated as we navigate between views.
+        -->
+        <ion-nav-bar class="bar-stable">
+          <ion-nav-back-button>
+          </ion-nav-back-button>
+        </ion-nav-bar>
+
+        <ion-nav-buttons side="left">
+          <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()">
+          </button>
+        </ion-nav-buttons>
+
+        <ion-nav-view name="appContent"></ion-nav-view>
+      </ion-side-menu-content>
+
+      <ion-side-menu side="left">
+        <ion-header-bar class="bar-assertive">
+          <h1 class="title">Left Menu</h1>
+        </ion-header-bar>
+        <ion-view name="leftMenu"></ion-view>
+      </ion-side-menu>
+    </ion-side-menus>
+
+
   </body>
 </html>
