--- a/www/app/bloodpressure/list.html
+++ b/www/app/bloodpressure/list.html
@@ -6,7 +6,7 @@
   </ion-nav-buttons>
   <ion-content class="padding">
     <timeline>
-      <timeline-event ng-repeat="event in bloodpressure.events" side="right" ng-swipe-right="console.log( 'swipe right', this);">
+      <timeline-event ng-repeat="event in bloodpressure.events" side="right">
         <timeline-badge class="{{event.badgeClass}}">
           <i class="ion {{event.badgeIconClass}}"></i>
         </timeline-badge>
