Fixed add button

--- a/www/app/bloodpressure/list.html
+++ b/www/app/bloodpressure/list.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Blood pressure">
   <ion-nav-buttons side="secondary">
-    <a href="#/bloodpressure/add" class="button">
+    <a href="#/app/bloodpressure/add" class="button">
       <i class="ion ion-plus"></i>
     </a>
   </ion-nav-buttons>
