Added specific timeline, implemented remarks service

--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -17,7 +17,7 @@
         <a ng-click="app.login()" class="button button-block">Inloggen</a>
       </div>
       <div class="col" ng-if="app.isAuthenticated">
-        <a ng-click="intro.resetNav()" href="#/app/bloodpressure" nav-clear class="button button-block">Naar de data</a>
+        <a ng-click="intro.resetNav()" href="#/app/timeline" nav-clear class="button button-block">Naar de data</a>
       </div>
     </div>
 </ion-view>
