--- a/www/index.html
+++ b/www/index.html
@@ -31,9 +31,7 @@
     <script src="app/app.controller.js"></script>
 
     <!-- Startup and login logic -->
-    <script src="app/intro/index.controller.js"></script>
     <script src="app/intro/intro.controller.js"></script>
-    <script src="app/login/login.controller.js"></script>
     <script src="app/login/oauth2.service.js"></script>
     <script src="app/login/oauth2_interceptor.service.js"></script>
 
@@ -42,10 +40,25 @@
     <script src="app/generic/create.controller.js"></script>
     <script src="app/generic/datapoints.service.js"></script>
 
+    <!-- Timeline logic -->
+    <script src="app/timeline/timeline.controller.js"></script>
+
     <!-- Blood pressure logic -->
     <script src="app/bloodpressure/bloodpressure.controller.js"></script>
     <script src="app/bloodpressure/bloodpressure_create.controller.js"></script>
     <script src="app/bloodpressure/bloodpressure.service.js"></script>
+
+    <!-- Body weight logic -->
+    <script src="app/bodyweight/bodyweight.controller.js"></script>
+    <script src="app/bodyweight/bodyweight_create.controller.js"></script>
+    <script src="app/bodyweight/bodyweight.service.js"></script>
+
+    <!-- Remarks logic -->
+    <script src="app/remarks/remarks.controller.js"></script>
+    <script src="app/remarks/remarks_create.controller.js"></script>
+    <script src="app/remarks/remarks.service.js"></script>
+
+
   </head>
   <body ng-app="healthcafe">
     <ion-nav-view></ion-nav-view>
