Implemented charting capabilities, initially for blood_pressure measurements

--- a/www/app/bloodpressure/list.html
+++ b/www/app/bloodpressure/list.html
@@ -4,7 +4,7 @@
       <i class="ion ion-plus"></i>
     </a>
   </ion-nav-buttons>
-  <ion-content class="padding">
+  <ion-content class="padding chart-container">
     <svg class="chart"></svg>
   </ion-content>
 </ion-view>
