--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     <script src="lib/d3-tip/index.js"></script>
     <script src="lib/plottable/plottable.min.js"></script>
     <script src="lib/moment/min/moment.min.js"></script>
-    <script src="lib/omh-web-visualizations/dist/omh-web-visualizations-all.min.js"></script>
+    <script src="lib/omh-web-visualizations/dist/omh-web-visualizations-all.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -48,7 +48,7 @@
     <script src="app/login/oauth2_interceptor.service.js"></script>
 
     <!-- Generic datapoint logic -->
-    <script src="app/generic/list.controller.js"></script>
+    <script src="app/generic/chart.controller.js"></script>
     <script src="app/generic/create.controller.js"></script>
     <script src="app/generic/datapoints.service.js"></script>
 
