Made charts reusable and restructured reusability of creating datapoints

--- a/www/app/bloodpressure/chart.html
+++ b/www/app/bloodpressure/chart.html
@@ -4,7 +4,7 @@
       <i class="ion ion-plus"></i>
     </a>
   </ion-nav-buttons>
-  <ion-content class="padding chart-container">
+  <ion-content class="padding chart-container bloodpressure-container">
     <svg class="chart"></svg>
   </ion-content>
 </ion-view>
