--- a/www/app/layout.html
+++ b/www/app/layout.html
@@ -36,6 +36,12 @@
         <ion-item ng-if="app.isAuthenticated" menu-close href="#/app/cholesterol">
           Cholesterol
         </ion-item>
+        <ion-item ng-if="app.isAuthenticated" menu-close href="#/app/bodyweight">
+          Body weight
+        </ion-item>
+        <ion-item ng-if="app.isAuthenticated" menu-close href="#/app/bmi">
+          BMI
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
