Implemented support for BMI measurements

--- a/www/app/bodyweight/create.html
+++ b/www/app/bodyweight/create.html
@@ -6,7 +6,7 @@
           <div class="input-label">
             Body weight
           </div>
-          <input type="number" ng-model="bodyweight.data.weight" placeholder="body weight in kg" />
+          <input type="number" ng-model="bodyweight.data.weight" step="any" placeholder="body weight in kg" />
         </ion-item>
       </ion-list>
       <p class="padding">
