--- a/www/app/timeline/add_menu.html
+++ b/www/app/timeline/add_menu.html
@@ -7,6 +7,9 @@
       <a class="item" href="#/app/bodyweight/add" ng-click="popover.hide()">
         Body weight
       </a>
+      <a class="item" href="#/app/bmi/add" ng-click="popover.hide()">
+        BMI
+      </a>
       <a class="item" href="#/app/remarks/add" ng-click="popover.hide()">
         Remark
       </a>
