--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,12 @@
     <script src="app/bodyweight/bodyweight_create.controller.js"></script>
     <script src="app/bodyweight/bodyweight.service.js"></script>
 
+    <!-- BMI logic -->
+    <script src="app/bmi/bmi.controller.js"></script>
+    <script src="app/bmi/bmi_create.controller.js"></script>
+    <script src="app/bmi/bmi.service.js"></script>
+
+
     <!-- Remarks logic -->
     <script src="app/remarks/remarks.controller.js"></script>
     <script src="app/remarks/remarks_create.controller.js"></script>
