Implemented support for blood glucose measurements

--- a/www/app/timeline/add_menu.html
+++ b/www/app/timeline/add_menu.html
@@ -4,6 +4,12 @@
       <a class="item" href="#/app/bloodpressure/add" ng-click="popover.hide()">
         Blood Pressure
       </a>
+      <a class="item" href="#/app/bloodglucose/add" ng-click="popover.hide()">
+        Blood Glucose
+      </a>
+      <a class="item" href="#/app/cholesterol/add" ng-click="popover.hide()">
+        Cholesterol
+      </a>
       <a class="item" href="#/app/bodyweight/add" ng-click="popover.hide()">
         Body weight
       </a>
