--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,11 @@
     <script src="app/bloodpressure/bloodpressure_create.controller.js"></script>
     <script src="app/bloodpressure/bloodpressure.service.js"></script>
 
+    <!-- Blood glucose logic -->
+    <script src="app/bloodglucose/bloodglucose.controller.js"></script>
+    <script src="app/bloodglucose/bloodglucose_create.controller.js"></script>
+    <script src="app/bloodglucose/bloodglucose.service.js"></script>
+
     <!-- Body weight logic -->
     <script src="app/bodyweight/bodyweight.controller.js"></script>
     <script src="app/bodyweight/bodyweight_create.controller.js"></script>
