--- a/www/index.html
+++ b/www/index.html
@@ -75,6 +75,10 @@
     <script src="app/bmi/bmi_create.controller.js"></script>
     <script src="app/bmi/bmi.service.js"></script>
 
+    <!-- Cholesterol logic -->
+    <script src="app/cholesterol/cholesterol.controller.js"></script>
+    <script src="app/cholesterol/cholesterol_create.controller.js"></script>
+    <script src="app/cholesterol/cholesterol.service.js"></script>
 
     <!-- Remarks logic -->
     <script src="app/remarks/remarks.controller.js"></script>
