Enabled deleting events from the timeline

--- a/www/app/timeline/timeline.html
+++ b/www/app/timeline/timeline.html
@@ -6,11 +6,11 @@
   </ion-nav-buttons>
   <ion-content class="padding">
     <timeline>
-      <timeline-event ng-repeat="event in timeline.events" side="right">
+      <timeline-event id="event-{{event.id}}" ng-repeat="event in timeline.events" side="right" ng-class="{removed: event.removed}">
         <timeline-badge class="{{event.badgeClass}}">
           <i class="ion {{event.badgeIconClass}}"></i>
         </timeline-badge>
-        <timeline-panel class="{{event.badgeClass}}">
+        <timeline-panel class="{{event.badgeClass}} item-icon-right">
           <timeline-heading>
             <h4 ng-if="event.type == 'intervention'">{{event.message}}</h4>
             <h4 ng-if="event.measurementType == 'blood-pressure'">Blood pressure: {{event.datapoint.body.systolic_blood_pressure.value}} / {{event.datapoint.body.diastolic_blood_pressure.value}}</h4>
@@ -25,6 +25,9 @@
               </span>
             </h4>
             <p><small class="text-muted"><i class="ion ion-clock"></i>{{event.date | date}}</small></p>
+            <a class="icon delete-icon" ng-if="event.model" ng-click="timeline.remove(event);">
+              <i class="ion ion-trash-b"></i>
+            </a>
           </timeline-heading>
         </timeline-panel>
       </timeline-event>
