Added dummy info pages for all data types

--- a/www/app/bmi/chart.html
+++ b/www/app/bmi/chart.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Body Mass Index">
   <ion-nav-buttons side="secondary">
+    <a href="#/app/bmi/info" class="button">
+      <i class="ion ion-information-circled"></i>
+    </a>
     <a href="#/app/bmi/add" class="button">
       <i class="ion ion-plus"></i>
     </a>
