--- a/www/app/bodyweight/chart.html
+++ b/www/app/bodyweight/chart.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Body weight">
   <ion-nav-buttons side="secondary">
+    <a href="#/app/bodyweight/info" class="button">
+      <i class="ion ion-information-circled"></i>
+    </a>
     <a href="#/app/bodyweight/add" class="button">
       <i class="ion ion-plus"></i>
     </a>
