--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,7 @@
     <!-- Generic datapoint logic -->
     <script src="app/generic/chart.controller.js"></script>
     <script src="app/generic/create.controller.js"></script>
+    <script src="app/generic/info.controller.js"></script>
     <script src="app/generic/datapoints.service.js"></script>
 
     <!-- Timeline logic -->
