--- a/www/app/bloodpressure/chart.html
+++ b/www/app/bloodpressure/chart.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Blood pressure">
   <ion-nav-buttons side="secondary">
+    <a href="#/app/bloodpressure/info" class="button">
+      <i class="ion ion-information-circled"></i>
+    </a>
     <a href="#/app/bloodpressure/add" class="button">
       <i class="ion ion-plus"></i>
     </a>
