--- a/www/app/cholesterol/chart.html
+++ b/www/app/cholesterol/chart.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Cholesterol">
   <ion-nav-buttons side="secondary">
+    <a href="#/app/cholesterol/info" class="button">
+      <i class="ion ion-information-circled"></i>
+    </a>
     <a href="#/app/cholesterol/add" class="button">
       <i class="ion ion-plus"></i>
     </a>
