Updated config and combined and minified files

--- a/www/index.html
+++ b/www/index.html
@@ -37,55 +37,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="app/app.module.js"></script>
-    <script src="app/app.config.js"></script>
-    <script src="app/app.routes.js"></script>
-    <script src="app/app.controller.js"></script>
-
-    <!-- Startup and login logic -->
-    <script src="app/intro/intro.controller.js"></script>
-    <script src="app/login/oauth2.service.js"></script>
-    <script src="app/login/oauth2_interceptor.service.js"></script>
-
-    <!-- Generic datapoint logic -->
-    <script src="app/generic/chart.controller.js"></script>
-    <script src="app/generic/create.controller.js"></script>
-    <script src="app/generic/info.controller.js"></script>
-    <script src="app/generic/datapoints.service.js"></script>
-
-    <!-- Timeline logic -->
-    <script src="app/timeline/timeline.controller.js"></script>
-
-    <!-- Blood pressure logic -->
-    <script src="app/bloodpressure/bloodpressure.controller.js"></script>
-    <script src="app/bloodpressure/bloodpressure_create.controller.js"></script>
-    <script src="app/bloodpressure/bloodpressure.service.js"></script>
-
-    <!-- Blood glucose logic -->
-    <script src="app/bloodglucose/bloodglucose.controller.js"></script>
-    <script src="app/bloodglucose/bloodglucose_create.controller.js"></script>
-    <script src="app/bloodglucose/bloodglucose.service.js"></script>
-
-    <!-- Body weight logic -->
-    <script src="app/bodyweight/bodyweight.controller.js"></script>
-    <script src="app/bodyweight/bodyweight_create.controller.js"></script>
-    <script src="app/bodyweight/bodyweight.service.js"></script>
-
-    <!-- BMI logic -->
-    <script src="app/bmi/bmi.controller.js"></script>
-    <script src="app/bmi/bmi_create.controller.js"></script>
-    <script src="app/bmi/bmi.service.js"></script>
-
-    <!-- Cholesterol logic -->
-    <script src="app/cholesterol/cholesterol.controller.js"></script>
-    <script src="app/cholesterol/cholesterol_create.controller.js"></script>
-    <script src="app/cholesterol/cholesterol.service.js"></script>
-
-    <!-- Remarks logic -->
-    <script src="app/remarks/remarks.controller.js"></script>
-    <script src="app/remarks/remarks_create.controller.js"></script>
-    <script src="app/remarks/remarks.service.js"></script>
-
+    <script src="app/app.js"></script>
 
   </head>
   <body ng-app="healthcafe">
