--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 
     <script src="lib/Angular.uuid2/dist/angular-uuid2.min.js "></script>
     <script src="lib/angular-timeline/dist/angular-timeline.js"></script>
+    <script src="lib/angular-indexedDB/angular-indexed-db.js"></script>
 
     <!-- OMH visualizations -->
     <script src="lib/d3/d3.min.js"></script>
@@ -35,6 +36,9 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <!-- indexed db polyfill -->
+    <!--<script src="lib/indexeddbshim.min.js"></script>-->
 
     <!-- your app's js -->
     <script src="app/app.module.js"></script>
