--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -13,10 +13,7 @@
     </p>
 
     <div class="row">
-      <div class="col" ng-if="!app.isAuthenticated">
-        <a ng-click="app.login()" class="button button-block">Inloggen</a>
-      </div>
-      <div class="col" ng-if="app.isAuthenticated">
+      <div class="col">
         <a ng-click="intro.resetNav()" href="#/app/timeline" nav-clear class="button button-block">Naar de data</a>
       </div>
     </div>
