--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,10 @@
     <script src="app/remarks/remarks_create.controller.js"></script>
     <script src="app/remarks/remarks.service.js"></script>
 
+    <!-- Sharing logic -->
+    <script src="app/share/share.controller.js"></script>
+    <script src="app/share/share.service.js"></script>
+    <script src="app/share/connect.controller.js"></script>
 
   </head>
   <body ng-app="healthcafe">
