--- a/www/app/layout.html
+++ b/www/app/layout.html
@@ -21,20 +21,15 @@
         <ion-item menu-close href="#/app/timeline">
           All measurements
         </ion-item>
-        <ion-item menu-close href="#/app/bloodpressure">
-          Blood pressure
+        <ion-item menu-close ng-href="#/app/{{datatype.name}}" ng-repeat="datatype in app.datatypes">
+          {{datatype.label}}
         </ion-item>
-        <ion-item menu-close href="#/app/bloodglucose">
-          Blood glucose
+
+        <ion-item class="item-divider">
+          Sharing
         </ion-item>
-        <ion-item menu-close href="#/app/cholesterol">
-          Cholesterol
-        </ion-item>
-        <ion-item menu-close href="#/app/bodyweight">
-          Body weight
-        </ion-item>
-        <ion-item menu-close href="#/app/bmi">
-          BMI
+        <ion-item menu-close href="#/app/share/{{key}}" ng-repeat="(key, service) in app.sharing">
+          {{service.label}}
         </ion-item>
       </ion-list>
     </ion-content>
