Now showing a message when measurements are missing

--- a/www/app/share/share.html
+++ b/www/app/share/share.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Share: {{sharing.service.label}}">
-  <ion-content class="padding">
+  <ion-content class="sharing padding">
     <p>
       {{sharing.service.description}}
     </p>
