--- a/www/app/bmi/chart.html
+++ b/www/app/bmi/chart.html
@@ -8,6 +8,12 @@
     </a>
   </ion-nav-buttons>
   <ion-content class="padding chart-container bmi-container">
+    <div ng-show="loading">
+      <ion-spinner></ion-spinner> Loading...
+    </div>
+    <p ng-show="!loading && events.length == 0">
+      Start <a href="#/app/bmi/add">adding</a> measurements or <a href="#/app/share/healthcafe">import from healthcafe.</a>
+    </p>
     <svg class="chart"></svg>
   </ion-content>
 </ion-view>
