--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,17 @@
 
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- Icons and information for web-app usage -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+
+    <link rel="apple-touch-icon" href="assets/icons/ios/Icon-60@2x.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/ios/Icon-60@3x.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/ios/Icon-76.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/ios/Icon-76@2x.png" />
+    <link rel="apple-touch-icon" sizes="58x58" href="assets/icons/ios/Icon-Small@2x.png" />
+    <link rel="manifest" href="manifest.json">
+
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
