--- a/www/index.html
+++ b/www/index.html
@@ -5,14 +5,6 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="lib/angular-timeline/dist/angular-timeline.css" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="lib/plottable/plottable.css">
-    <link href="lib/omh-web-visualizations/dist/omh-web-visualizations-all.min.css" rel="stylesheet">
-
-    <link href="assets/css/style.css" rel="stylesheet">
-
     <!-- Icons and information for web-app usage -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -24,15 +16,28 @@
     <link rel="apple-touch-icon" sizes="58x58" href="assets/icons/ios/Icon-Small@2x.png" />
     <link rel="manifest" href="manifest.json">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
+    <!--
+    <link href="dist/style.min.css" rel="stylesheet" />
+    <script src="dist/lib.min.js"></script>
+    <script src="dist/app.min.js"></script>
     -->
+
+    <!-- Lib and app stylesheets -->
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="lib/angular-timeline/dist/angular-timeline.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="lib/plottable/plottable.css">
+    <link href="lib/omh-web-visualizations/dist/omh-web-visualizations-all.css" rel="stylesheet">
+
+    <link href="assets/css/style.css" rel="stylesheet">
+
+
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- angular directives -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
 
     <script src="lib/Angular.uuid2/dist/angular-uuid2.min.js "></script>
     <script src="lib/angular-timeline/dist/angular-timeline.js"></script>
@@ -44,12 +49,6 @@
     <script src="lib/plottable/plottable.min.js"></script>
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/omh-web-visualizations/dist/omh-web-visualizations-all.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- indexed db polyfill -->
-    <!--<script src="lib/indexeddbshim.min.js"></script>-->
 
     <!-- your app's js -->
     <script src="app/app.module.js"></script>
@@ -107,7 +106,7 @@
     <script src="app/share/connect.controller.js"></script>
 
   </head>
-  <body ng-app="healthcafe">
+  <body ng-app="healthcafe" ng-strict-di>
     <ion-nav-view></ion-nav-view>
     <ion-side-menus>
 
