--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@
     <!-- Generic datapoint logic -->
     <script src="app/generic/chart.controller.js"></script>
     <script src="app/generic/create.controller.js"></script>
+    <script src="app/generic/detail.controller.js"></script>
     <script src="app/generic/info.controller.js"></script>
     <script src="app/generic/datapoints.service.js"></script>
 
