test app veranderingen

--- a/www/app/cholesterol/create.html
+++ b/www/app/cholesterol/create.html
@@ -12,25 +12,25 @@
           <div class="input-label">
             Total cholesterol level
           </div>
-          <input type="number" step="any" ng-model="cholesterol.data.body.total" required="required" placeholder="Total cholesterol level in mg/dL" />
+          <input type="number" step="any" ng-model="cholesterol.data.body.total" required="required" placeholder="Total cholesterol level in mmol/L" />
         </ion-item>
         <ion-item class="item-input">
           <div class="input-label">
             LDL cholesterol level
           </div>
-          <input type="number" step="any" ng-model="cholesterol.data.body.ldl" placeholder="LDL cholesterol level in mg/dL" />
+          <input type="number" step="any" ng-model="cholesterol.data.body.ldl" placeholder="LDL cholesterol level in mmol/L" />
         </ion-item>
         <ion-item class="item-input">
           <div class="input-label">
             HDL cholesterol level
           </div>
-          <input type="number" step="any" ng-model="cholesterol.data.body.hdl" placeholder="HDL cholesterol level in mg/dL" />
+          <input type="number" step="any" ng-model="cholesterol.data.body.hdl" placeholder="HDL cholesterol level in mmol/L" />
         </ion-item>
         <ion-item class="item-input">
           <div class="input-label">
             Triglycerides level
           </div>
-          <input type="number" step="any" ng-model="cholesterol.data.body.triglycerides" placeholder="Triglycerides level in mg/dL" />
+          <input type="number" step="any" ng-model="cholesterol.data.body.triglycerides" placeholder="Triglycerides level in mmol/L" />
         </ion-item>
 
       </ion-list>
