--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,16 +1,14 @@
 <ion-view view-title="Healthcafe">
   <ion-content class="padding initial">
-    <div class="app-logo"><img src="assets/img/logo.png" /></div>
+    <div class="app-logo"><img src="assets/img/foto_health_cafe_app" /></div>
 
     <p>
-      Welkom bij TNO Healthcafe.
+      Welkom bij de TNO Healthcafe App.
     </p>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id hendrerit felis. Sed elementum diam id tincidunt vehicula. Nunc sollicitudin tincidunt accumsan. Mauris imperdiet eleifend lacus, eu blandit purus faucibus eu. Nunc tincidunt lobortis ante, et viverra lacus faucibus vitae. Curabitur ut pulvinar odio, sed condimentum velit. Etiam eget maximus dolor, eget sodales ex. Donec rhoncus dapibus nisl, at hendrerit ex eleifend vel. Vivamus non facilisis eros. Suspendisse risus massa, ullamcorper nec bibendum a, feugiat eget libero. Proin eleifend finibus massa ac congue.
-    </p>
+	Deze App maakt het mogelijk om een aantal aspecten van uw gezondheid te registeren zoals cholesterol, gewicht, BMI, bloeddruk en bloedglucose. Deze data wordt op uw telefoon bewaard en wordt niet met derden gedeeld. </p>
     <p>
-      Sed vehicula viverra eros, nec aliquam nulla hendrerit quis. Quisque facilisis ligula nec lacus gravida, in aliquam urna efficitur. Etiam tristique placerat dui, nec eleifend libero imperdiet at. Etiam eget porta est. Aenean justo metus, pretium vel ultrices ut, ornare hendrerit orci. Mauris in nulla ipsum. Nam dui tortor, euismod quis mattis ut, ultrices et felis. Proin volutpat consectetur velit et congue. Vivamus sed pharetra dui. Maecenas blandit ac ante eu volutpat. Mauris ac tortor eu ante dictum sodales sed eu lorem.
-    </p>
+De App wordt aangeboden als service om uw data te bewaren  om trends en grafieken te bekijken en om adviezen en tips te geven. De data wordt verwijderd zodra u uw cache van uw telefoon leegmaakt. In de toekomst wordt het wellicht mogelijk om uw data met andere services te delen of wordt er een optie toegevoegd waarmee u uw data op een beveiligde server, anoniem wordt opgeslagen.</p>
 
     <div class="row">
       <div class="col">
