--- a/www/app/bloodglucose/create.html
+++ b/www/app/bloodglucose/create.html
@@ -12,7 +12,7 @@
           <div class="input-label">
             Blood Glucose level
           </div>
-          <input type="number" step="any" ng-model="bloodglucose.data.body.level" placeholder="Blood glucose level in mg/dL" />
+          <input type="number" step="any" ng-model="bloodglucose.data.body.level" placeholder="Blood glucose level in mmol/L" />
         </ion-item>
 
         <label class="item-input item-select">
