--- a/www/app/bloodglucose/info.html
+++ b/www/app/bloodglucose/info.html
@@ -2,7 +2,7 @@
   <ion-content class="padding">
     <h1>Information about glucose</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod felis et odio accumsan, in sagittis dui tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse molestie congue semper. Suspendisse finibus egestas erat semper placerat. Duis et nunc mauris. Aenean ac cursus est, vitae euismod urna.
+      Als u een verhoogd bloedglucose heeft dan vindt u hieronder een aantal adviezen en tips
     </p>
     <p>
       Praesent feugiat efficitur tincidunt. Ut massa elit, hendrerit non turpis eget, convallis sollicitudin ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus nisi quis fringilla efficitur. Proin fringilla lacus dapibus erat luctus, a mattis ligula congue.
