--- a/www/app/bloodpressure/info.html
+++ b/www/app/bloodpressure/info.html
@@ -1,20 +1,19 @@
 <ion-view view-title="Blood pressure">
   <ion-content class="padding">
-    <h1>Information about blood pressure</h1>
+    <h1>Information over bloeddruk</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod felis et odio accumsan, in sagittis dui tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse molestie congue semper. Suspendisse finibus egestas erat semper placerat. Duis et nunc mauris. Aenean ac cursus est, vitae euismod urna.
+      Uw bloeddruk ... Uw bovendruk .. Uw onderdruk .. Mocht u boven deze waardes zitten dan kunt u een van de onderstaande adviezen opvolgen.
     </p>
     <p>
-      Praesent feugiat efficitur tincidunt. Ut massa elit, hendrerit non turpis eget, convallis sollicitudin ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus nisi quis fringilla efficitur. Proin fringilla lacus dapibus erat luctus, a mattis ligula congue.
+      Eet groene appels. Onderzoek heeft uitgewezen dat ... uw bloeddruk verlaagt. Klik hier voor achtergrond informatie
+          </p>
+    <p>
+      Eet minder zout appels. Onderzoek heeft uitgewezen dat ... uw bloeddruk verlaagt. Klik hier voor achtergrond informatie
     </p>
     <p>
-      Nulla molestie, turpis sed tempor pharetra, nibh eros commodo magna, in dictum ante velit aliquam orci.
-    </p>
+	Eet meer zout maar dan wel de goede kaliumchloride   </p>
     <p>
-      Integer eleifend molestie purus et dictum. Mauris congue posuere enim, at iaculis orci imperdiet eu. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer eget ligula sed justo dictum vulputate luctus at enim.
-    </p>
-    <p>
-      Cras consectetur augue neque, nec vestibulum eros iaculis egestas. Etiam malesuada neque enim, ac convallis nisi luctus facilisis.
+      Eet minder zout appels. Onderzoek heeft uitgewezen dat ... uw bloeddruk verlaagt. Klik hier voor achtergrond informatie
     </p>
   </ion-content>
 </ion-view>
