--- a/www/app/bloodglucose/chart.html
+++ b/www/app/bloodglucose/chart.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Blood glucose">
+<ion-view view-title="Bloed glucose">
   <ion-nav-buttons side="secondary">
     <a href="#/app/bloodglucose/info" class="button">
       <i class="ion ion-information-circled"></i>
