--- a/www/app/bloodglucose/create.html
+++ b/www/app/bloodglucose/create.html
@@ -1,4 +1,4 @@
-<ion-view view-title="New blood glucose measurement">
+<ion-view view-title="Nieuwe bloed glucose meting">
   <ion-content>
     <form ng-submit="bloodglucose.save()">
       <ion-list>
@@ -6,7 +6,7 @@
           <div class="input-label">
             Date
           </div>
-          <input type="date" ng-model="bloodglucose.data.date" placeholder="Date of measurement" />
+          <input type="date" ng-model="bloodglucose.data.date" placeholder="Datum van de meting" />
         </ion-item>
         <ion-item class="item-input">
           <div class="input-label">
