--- a/www/app/bloodglucose/detail.html
+++ b/www/app/bloodglucose/detail.html
@@ -11,7 +11,7 @@
       </ion-item>
       <ion-item class="item-icon-left">
         <i class="icon ion-thumbsup"></i>
-        <p>Your blood glucose is perfect. Keep up the good work</p>
+        <p>Uw bloedglucose is goed, ga zo door</p>
       </ion-item>
     </ion-list>
   </ion-content>
