--- a/www/app/bloodglucose/info.html
+++ b/www/app/bloodglucose/info.html
@@ -1,12 +1,11 @@
 <ion-view view-title="Glucose">
   <ion-content class="padding">
-    <h1>Information about glucose</h1>
+    <h1>Tips voor verhoogd bloed glucose</h1>
     <p>
       Als u een verhoogd bloedglucose heeft dan vindt u hieronder een aantal adviezen en tips
     </p>
     <p>
-      Praesent feugiat efficitur tincidunt. Ut massa elit, hendrerit non turpis eget, convallis sollicitudin ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus nisi quis fringilla efficitur. Proin fringilla lacus dapibus erat luctus, a mattis ligula congue.
-    </p>
+      Eet meer producten met een lage glycemische index.    </p>
     <p>
       Nulla molestie, turpis sed tempor pharetra, nibh eros commodo magna, in dictum ante velit aliquam orci.
     </p>
